Finished FAQ, additional resources, veteran discount.

--- a/about.html
+++ b/about.html
@@ -160,17 +160,26 @@
           display_div.appendChild(new_span);
         </script>
       </div>
+    </div>
+    <div class="row">
+      <div class="card w-100 text-white bg-main my-5 py-4 text-center">
+        <div class="card-body">
+          <h1>GIVING BACK TO VETERANS</h1>
+          <p class="text-white m-0">You've fought for us. Now let us fight for you.</p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
       <div class="col-lg-6">
         <h2>Veteran Owned</h2>
         <p>
-          Our business is veteran owned and determined to show support for the veteran community by offering veteran discounts
-          to the brave men and women who have fought for our country. The owner of Calvert Exterminators, Dennis Heflin, has been
-          giving back to the veteran community for years at the American Legion.
+          Calvert Exterminators is veteran owned and determined to show support for the veteran community by offering veteran discounts
+          to the brave men and women who have fought for our country. The owner and president of Calvert Exterminators, Dennis Heflin,
+          has been giving back to the veteran community for years at the American Legion Gray Ray Post 220.
         </p>
       </div>
       <div class="col-lg-6">
         <h2>Veteran Discount</h2>
-        <h5>You've fought for us. Now let us fight for you.</h5>
         <p>
           Eligible customers who provide proof of service may receive a military discount as a thank you for their service.
           Enquire with our staff about it while arranging an appointment.
@@ -180,7 +189,8 @@
     <!-- /.row -->
 
     <!-- Team Members -->
-    <h2>Our Team</h2>
+    <!-- Cards showing information for team members -->
+    <!--h2>Our Team</h2>
 
     <div class="row">
       <div class="col-lg-4 mb-4">
@@ -222,11 +232,12 @@
           </div>
         </div>
       </div>
-    </div>
+    </div-->
     <!-- /.row -->
 
     <!-- Our Customers -->
-    <h2>Our Customers</h2>
+    <!-- Cards showing a small 500x300 image -->
+    <!--h2>Our Customers</h2>
     <div class="row">
       <div class="col-lg-2 col-sm-4 mb-4">
         <img class="img-fluid" src="https://placehold.it/500x300" alt="">
@@ -246,7 +257,7 @@
       <div class="col-lg-2 col-sm-4 mb-4">
         <img class="img-fluid" src="https://placehold.it/500x300" alt="">
       </div>
-    </div>
+    </div-->
     <!-- /.row -->
 
   </div>
