--- a/contact.html
+++ b/contact.html
@@ -371,6 +371,7 @@
             <a>
               By submitting this request, I validate that I am 18 years of age or older. Additionally, I give Calvert Exterminators permission to call or text me at the number provided regarding
               Calvert Exterminators services using automated technology.
+              I understand that submitting this form is not a confirmation of service.
               I understand my consent is not a condition of purchase.
               Commercial customer? Call (410) 535-8661 </a>
           </div>
