--- a/dog-runs.html
+++ b/dog-runs.html
@@ -125,8 +125,8 @@
     </ol>
 
     <!-- Image Header -->
-    <div class="row h-100">
-        <div class="col-sm-12 my-auto">
+    <div class="row">
+        <div class="col">
             <img class="center-block" src="dogs(wide).jpg" alt="">
         </div>
     </div>
