--- a/index.html
+++ b/index.html
@@ -106,14 +106,13 @@
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Why Calvert?
+              More
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
               <a class="dropdown-item" href="about.html">About Us</a>
-              <a class="dropdown-item" href="resources.html">Additional Resources</a>
-              <!--a class="dropdown-item" href="clients.html">Clients</a-->
               <a class="dropdown-item" href="vet.html">Veteran Discount</a>
               <a class="dropdown-item" href="faq.html">FAQ</a>
+              <a class="dropdown-item" href="resources.html">Additional Resources</a>
             </div>
           </li>
 
@@ -585,7 +584,7 @@
   <div class="container">
     <div class="card text-white bg-main my-5 py-4 text-center">
       <div class="card-body">
-        <h1>Additional Information</h1>
+        <h1>Follow us</h1>
         <p class="text-white m-0">Keep up to date on our services through our Facebook, Instagram, and Twitter pages!</p>
       </div>
     </div>
