--- a/resources.html
+++ b/resources.html
@@ -1,10 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>FAQ</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/modern-business.css" rel="stylesheet">
+
 </head>
+
 <body>
 
+
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary fixed-top">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">
+            <img classs="img-responsive" width="130px" height="" src="CalvertExt-logo.png" style="position:relative;">
+        </a>
+
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="dog-runs.html">Dog Runs</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Services
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+                        <a class="dropdown-item" href="pest-control.html">Pest Control</a>
+                        <a class="dropdown-item" href="termite-control.html">Termite Control</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Pest Index
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+                        <a class="dropdown-item" href="ants.html">Ants</a>
+                        <a class="dropdown-item" href="bed-bugs.html">Bed Bugs</a>
+                        <a class="dropdown-item" href="roaches.html">Cockroaches</a>
+                        <a class="dropdown-item" href="fleas.html">Fleas</a>
+                        <a class="dropdown-item" href="flies.html">Flies</a>
+                        <a class="dropdown-item" href="mosquitoes.html">Mosquitoes</a>
+                        <a class="dropdown-item" href="rodents.html">Rodents</a>
+                        <a class="dropdown-item" href="hornets.html">Hornets</a>
+                        <a class="dropdown-item" href="termites.html">Termites</a>
+                        <a class="dropdown-item" href="spiders.html">Spiders</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Animal Index
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+                        <a class="dropdown-item" href="mammals.html">Mammals</a>
+                        <a class="dropdown-item" href="reptiles.html">Reptiles</a>
+                        <!-- TURN MAMMALS AND REPTILES INTO DROPDOWN SUBMENUS -->
+                    </div>
+                </li>
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Why Calvert?
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+                        <a class="dropdown-item" href="about.html">About Us</a>
+                        <a class="dropdown-item" href="clients.html">Clients</a>
+                        <a class="dropdown-item" href="vet.html">Veteran Owned</a>
+                        <a class="dropdown-item" href="faq.html">FAQ</a>
+                    </div>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="https://twitter.com/CalvrtXtermin8r"><i class="fa fa-twitter"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.instagram.com/calvertexterminators/"><i class="fa fa-instagram"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.facebook.com/CalvertExterminators"><i class="fa fa-facebook"></i></a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <ul class="navbar-nav mr-auto">
+        <li class="navbar-brand">
+            <a class="nav-contact" href="contact.html"><i class="fa fa-envelope"></i>Contact Us</a>
+            </a>
+        </li>
+    </ul>
+</nav>
+
+<!-- Page Content -->
+<div class="container">
+
+    <!-- Page Heading/Breadcrumbs -->
+    <h1 class="mt-4 mb-3">Additional Resources
+    </h1>
+
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+            <a href="index.html">Home</a>
+        </li>
+        <li class="breadcrumb-item active">Additional Resources</li>
+    </ol>
+
+    <div class="mb-4" id="accordion" role="tablist" aria-multiselectable="true">
+        <div class="card">
+            <div class="card-header" role="tab" id="headingOne">
+                <h5 class="mb-0">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">National Pest Management Association</a>
+                </h5>
+            </div>
+
+            <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
+                <div class="card-body">
+                    PestWorld is the official website of the National Pest Management Association (NPMA).
+                    In addition to general pest control resources, you can search for exterminators in your area.
+                    You can also find detailed information on specific household pests to help you prevent infestations.
+                    Feel free to use PestWorld.org as your main resource for information on bugs, rodents, pest control
+                    and the growing professional pest management industry. Browse the latest pest news, learn more about
+                    extermination services or find a pest control professional in your area. Also, get the most up-to-date
+                    pest control information straight from the experts at PestWorld!
+                    <br>
+                    <a href="https://www.pestworld.org/" type="button" class="btn btn-primary">Link</a>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" role="tab" id="headingTwo">
+                <h5 class="mb-0">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Maryland State Pest Control Association
+                    </a>
+                </h5>
+            </div>
+            <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
+                <div class="card-body">
+                    The Maryland State Pest Control Association is a resource for all residents of Maryland who find
+                    themselves in need of pest control services, and therefore have questions related to the pest control
+                    industry. In cooperation with the National Pest Management Association, we are also here to promote
+                    general standards and ethics of the pest control industry.
+                    <br>
+                    <a href="https://www.marylandpest.org/aws/MSPCA/pt/sp/home-page" type="button" class="btn btn-primary">Link</a>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" role="tab" id="headingThree">
+                <h5 class="mb-0">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Maryland Department of Agriculture</a>
+                </h5>
+            </div>
+            <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree">
+                <div class="card-body">
+                    The mission of the Maryland Department of Agriculture is to provide leadership and support to agriculture
+                    and the citizens of Maryland. We accomplish this by conducting regulatory, service, and educational
+                    activities that assure consumer confidence, protect the environment, and promote agriculture.
+                    <br>
+                    <a href="https://mda.maryland.gov/Pages/homepage.aspx" type="button" class="btn btn-primary">Link</a>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" role="tab" id="headingFour">
+                <h5 class="mb-0">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseThree">The Chesapeake Bay Program</a>
+                </h5>
+            </div>
+            <div id="collapseFour" class="collapse" role="tabpanel" aria-labelledby="headingThree">
+                <div class="card-body">
+                    The Chesapeake Bay Program is a unique regional partnership that has led and directed the restoration
+                    of the Chesapeake Bay since 1983. Their website has an abundance of information to educate the community
+                    on wildlife, sustainable practices, and complex problems facing the Chesapeake Bay.
+                    <br>
+                    <a href="https://www.chesapeakebay.net/" type="button" class="btn btn-primary">Link</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
+<!-- /.container -->
+
+<!-- Footer -->
+<footer class="py-5 bg-dark">
+    <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+    </div>
+    <!-- /.container -->
+</footer>
+
+<!-- Bootstrap core JavaScript -->
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
 </body>
+
 </html>
