--- a/vet.html
+++ b/vet.html
@@ -1,10 +1,283 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Veteran Information</title>
+
+    <!-- favicon Calvert Exterminators logo -->
+    <link rel="icon" href="CalvertExt-logo.png">
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/modern-business.css" rel="stylesheet">
+
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
 </head>
+
 <body>
 
+
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary fixed-top">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">
+            <img classs="img-responsive" width="130px" height="" src="CalvertExt-logo.png" style="position:relative;">
+        </a>
+
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="dog-runs.html">Dog Runs</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Services
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+                        <a class="dropdown-item" href="pest-control.html">Pest Control</a>
+                        <a class="dropdown-item" href="termite-control.html">Termite Control</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Pest Index
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+                        <a class="dropdown-item" href="ants.html">Ants</a>
+                        <a class="dropdown-item" href="bed-bugs.html">Bed Bugs</a>
+                        <a class="dropdown-item" href="roaches.html">Cockroaches</a>
+                        <a class="dropdown-item" href="fleas.html">Fleas</a>
+                        <a class="dropdown-item" href="flies.html">Flies</a>
+                        <a class="dropdown-item" href="mosquitoes.html">Mosquitoes</a>
+                        <a class="dropdown-item" href="rodents.html">Rodents</a>
+                        <a class="dropdown-item" href="hornets.html">Hornets</a>
+                        <a class="dropdown-item" href="termites.html">Termites</a>
+                        <a class="dropdown-item" href="spiders.html">Spiders</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Animal Index
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+                        <a class="dropdown-item" href="mammals.html">Mammals</a>
+                        <a class="dropdown-item" href="reptiles.html">Reptiles</a>
+                        <!-- TURN MAMMALS AND REPTILES INTO DROPDOWN SUBMENUS -->
+                    </div>
+                </li>
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Why Calvert?
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+                        <a class="dropdown-item" href="about.html">About Us</a>
+                        <a class="dropdown-item" href="resources.html">Additional Resources</a>
+                        <!--a class="dropdown-item" href="clients.html">Clients</a-->
+                        <a class="dropdown-item" href="vet.html">Veteran Discount</a>
+                        <a class="dropdown-item" href="faq.html">FAQ</a>
+                    </div>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="https://twitter.com/CalvrtXtermin8r"><i class="fa fa-twitter"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.instagram.com/calvertexterminators/"><i class="fa fa-instagram"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.facebook.com/CalvertExterminators"><i class="fa fa-facebook"></i></a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <ul class="navbar-nav mr-auto">
+        <li class="navbar-brand">
+            <a class="nav-contact" href="contact.html"><i class="fa fa-envelope"></i>Contact Us</a>
+            </a>
+        </li>
+    </ul>
+</nav>
+
+<!-- Page Content -->
+<div class="container">
+
+    <!-- Page Heading/Breadcrumbs -->
+    <h1 class="mt-4 mb-3">About
+        <small>Veteran Discount</small>
+    </h1>
+
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+            <a href="index.html">About</a>
+        </li>
+        <li class="breadcrumb-item active">Veteran Discount</li>
+    </ol>
+
+    <!-- Intro Content -->
+    <div class="row">
+        <div class="col-lg-6">
+            <!--img class="img-fluid rounded mb-4" src="dennis-with-dogs.png" width="750" height="450" alt=""-->
+            <p><a href="https://commons.wikimedia.org/wiki/File:Seal_of_the_U.S._Department_of_Veterans_Affairs.svg#/media/File:Seal_of_the_U.S._Department_of_Veterans_Affairs.svg"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Seal_of_the_U.S._Department_of_Veterans_Affairs.svg/1200px-Seal_of_the_U.S._Department_of_Veterans_Affairs.svg.png" alt="Seal of the U.S. Department of Veterans Affairs.svg"></a></p>
+        </div>
+        <div class="col-lg-6">
+            <h2>Our Commitment To Veterans</h2>
+            <div id="display_div_id" class="h6" style="color: white"></div>
+            <script>
+                //Gets the current year so the amount of years since founding is always accurate
+                var date = new Date();
+                var year = date.getFullYear();
+
+                var dif = year-1981;
+                var display_div = document.getElementById("display_div_id");
+
+                var str_dif="With " + dif + " years of serving the veterans of our community, we are determined to show our " +
+                    "gratitude to those who served. Being veteran owned for all "+ dif + " years, we know the sacrifices given by " +
+                    "the brave men and women in the armed forces. Our veteran discount is our way of showing thanks for your immense sacrifice. " +
+                    "We will off you an actual percentage for the discount at the time of payment.";
+
+                //display_div.removeChild(display_div.lastChild);
+                var new_span = document.createElement('span');
+
+                var str = str_dif.toString().replace(/(\d)(?=(\d{3})+(?!\d))/g, '$1,');
+                new_span.innerText=str;
+                display_div.appendChild(new_span);
+            </script>
+            <br>
+            <p>
+                To learn more about our veteran discount, simply ask our staff about it while arragning an appointment over the phone or by email.
+                Using our online form to arrange an appointment? Great! Let our staff know of your interest when they contact you by your
+                preferred method to confirm your appointment.
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="card w-100 text-white bg-main my-5 py-4 text-center">
+            <div class="card-body">
+                <h1>GIVING BACK TO VETERANS</h1>
+                <p class="text-white m-0">You've fought for us. Now let us fight for you.</p>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-6">
+            <h2>Veteran Owned</h2>
+            <p>
+                Calvert Exterminators is veteran owned and determined to show support for the veteran community by offering veteran discounts
+                to the brave men and women who have fought for our country. The owner and president of Calvert Exterminators, Dennis Heflin,
+                has been giving back to the veteran community for years at the American Legion Gray Ray Post 220.
+            </p>
+        </div>
+        <div class="col-lg-6">
+            <h2>Veteran Discount</h2>
+            <p>
+                Eligible customers who provide proof of service may receive a military discount as a thank you for their service.
+                Enquire with our staff about it while arranging an appointment.
+            </p>
+        </div>
+    </div>
+    <!-- /.row -->
+
+    <!-- Team Members -->
+    <!-- Cards showing information for team members -->
+    <!--h2>Our Team</h2>
+
+    <div class="row">
+      <div class="col-lg-4 mb-4">
+        <div class="card h-100 text-center">
+          <img class="card-img-top" src="https://placehold.it/750x450" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Dennis</h4>
+            <h6 class="card-subtitle mb-2 text-muted">Founder</h6>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+          </div>
+          <div class="card-footer">
+            <a href="#">name@example.com</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 mb-4">
+        <div class="card h-100 text-center">
+          <img class="card-img-top" src="https://placehold.it/750x450" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Team Member</h4>
+            <h6 class="card-subtitle mb-2 text-muted">Position</h6>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+          </div>
+          <div class="card-footer">
+            <a href="#">name@example.com</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 mb-4">
+        <div class="card h-100 text-center">
+          <img class="card-img-top" src="https://placehold.it/750x450" alt="">
+          <div class="card-body">
+            <h4 class="card-title">Team Member</h4>
+            <h6 class="card-subtitle mb-2 text-muted">Position</h6>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+          </div>
+          <div class="card-footer">
+            <a href="#">name@example.com</a>
+          </div>
+        </div>
+      </div>
+    </div-->
+    <!-- /.row -->
+
+    <!-- Our Customers -->
+    <!-- Cards showing a small 500x300 image -->
+    <!--h2>Our Customers</h2>
+    <div class="row">
+      <div class="col-lg-2 col-sm-4 mb-4">
+        <img class="img-fluid" src="https://placehold.it/500x300" alt="">
+      </div>
+      <div class="col-lg-2 col-sm-4 mb-4">
+        <img class="img-fluid" src="https://placehold.it/500x300" alt="">
+      </div>
+      <div class="col-lg-2 col-sm-4 mb-4">
+        <img class="img-fluid" src="https://placehold.it/500x300" alt="">
+      </div>
+      <div class="col-lg-2 col-sm-4 mb-4">
+        <img class="img-fluid" src="https://placehold.it/500x300" alt="">
+      </div>
+      <div class="col-lg-2 col-sm-4 mb-4">
+        <img class="img-fluid" src="https://placehold.it/500x300" alt="">
+      </div>
+      <div class="col-lg-2 col-sm-4 mb-4">
+        <img class="img-fluid" src="https://placehold.it/500x300" alt="">
+      </div>
+    </div-->
+    <!-- /.row -->
+
+</div>
+<!-- /.container -->
+
+<!-- Footer -->
+<footer class="py-5 bg-dark">
+    <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+    </div>
+    <!-- /.container -->
+</footer>
+
+<!-- Bootstrap core JavaScript -->
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
 </body>
+
 </html>
